2007-08-28  Helmut Eller  <heller@common-lisp.net>

	Fix some output related bugs.

	* swank.lisp (send-repl-results-to-emacs): Emit a fresh line.

	* slime.el (slime-insert-transcript-delimiter): Use
	insert-before-markers since slime-output-end is no longer left
	inserting.  Reported by Austin Haas <austin@pettomato.com>.

2007-08-28  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-display-or-scroll-completions,
	slime-scroll-completions): New functions.  Factored out of
	slime-expand-abbreviations-and-complete.

2007-08-28  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* slime.el (slime-repl-write-string): Handle arbitrary targets
	using slime-output-target-marker.
	(slime-last-output-target-id, slime-output-target-to-marker)
	(slime-output-target-marker)
	(slime-redirect-trace-output): Move back here from slime-presentations.el.

2007-08-28  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (classify-symbol, symbol-classification->string):
	Resurrected in swank.lisp. (I was bitten by cvs-pcl which
	committed (2007-08-27) my locally changed `contribs/swank-fuzzy.lisp'
	where I already removed these functions from.)

2007-08-28  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-make-form-spec-from-string): Elisp Hacking 101:
	Don't use `beginning-of-buffer' and `end-of-buffer' in Elisp code.

	* swank.lisp (read-form-spec): Unintern just newly interned
	symbols when an reader error occurs.

2007-08-28  Helmut Eller  <heller@common-lisp.net>

	Move presentations to contrib.  Part II.

	* swank.lisp (*listener-eval-function*): New variables.
	(listener-eval): Use it
	(repl-eval): Used to be listener-eval.
	(*send-repl-results-function*): New variable.
	(eval-region): Simplify.
	(track-package, cat): New functions.
	(slime-repl-clear-buffer-hook): New hook.
	(slime-repl-clear-buffer): Use it.

2007-08-28  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	Remove the ID argument from :write-string protocol messages.